--- a/voltronic-mqtt-v2/Dockerfile
+++ b/voltronic-mqtt-v2/Dockerfile
@@ -1,13 +1,9 @@
 ARG BUILD_FROM
-#FROM $BUILD_FROM
-FROM homeassistant/aarch64-base:latest
+FROM $BUILD_FROM
 
 ENV LANG C.UTF-8
 
-
 RUN apk add --no-cache curl git build-base gcc wget cmake jq mosquitto-clients make python3 py3-pip && pip3 install mpp-solar
-
-#RUN apt update && apt install -y curl git build-essential cmake jq mosquitto-clients
 
 WORKDIR /opt
 
